--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
-    <title>Klauwaerts Trainers</title>
+    <title>Klauwaerts Kalender</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
